--- a/vpg.ipynb
+++ b/vpg.ipynb
@@ -74,7 +74,7 @@
    "source": [
     "**Policy Gradient Theorem**\n",
     "\n",
-    "Policy gradient methods optimize a policy directly by maximizing the objective function (expected return) $ J(\\theta) = \\mathbb{E}_{\\tau \\sim \\pi_\\theta} \\left[ R(\\tau) \\right] $.  \n",
+    "Policy gradient methods optimize a policy directly by maximizing the objective function $ J(\\theta) = \\mathbb{E}_{\\tau \\sim \\pi_\\theta} \\left[ R(\\tau) \\right] $.  \n",
     "\n",
     "The gradient of the expected return $ J(\\theta)$  is given by  \n",
     "\n",
